included all files

--- a/index.html
+++ b/index.html
@@ -3,18 +3,65 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="styles/index.css" />
     <link rel="stylesheet" href="styles/normalize.css" />
     <link rel="stylesheet" href="styles/reset.css" />
+    <script
+      src="https://kit.fontawesome.com/6f09f3042b.js"
+      crossorigin="anonymous"
+    ></script>
     <link
       href="https://fonts.googleapis.com/css?family=Muli:400,700&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/css?family=Josefin+Sans&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="styles/index.css" />
     <title>Examination</title>
   </head>
   <body>
-    <header></header>
-    <section class="hero"></section>
+    <header>
+      <div class="flex">
+        <div class="brand">
+          <h1>Bhromaon</h1>
+          <h5>Safe Travel Anywhere</h5>
+        </div>
+
+        <div class="search">
+          <div class="search-bar">
+            <input type="text" placeholder="Search Your Travel Destination" />
+            <button>Search <i class="fas fa-search"></i></button>
+          </div>
+        </div>
+
+        <div class="scroll-down">
+          <a href="#whyChooseUs">
+            Scroll Down
+            <i class="fas fa-angle-down"></i>
+          </a>
+        </div>
+      </div>
+
+      <div class="menu">
+        <div class="brand">
+          <a href="#">Bhromaon</a>
+        </div>
+
+        <nav>
+          <ul>
+            <li>Contact Us</li>
+            <li>Travel With Us</li>
+            <li>What We Do</li>
+            <li>Who We Are</li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+    <section id="whyChooseUs" class="why-choose-us"></section>
+    <section class="how-it-works"></section>
+    <section class="accomodation"></section>
+    <section class="testimonials"></section>
     <footer></footer>
   </body>
 </html>
