Finished all sections

--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
       href="https://fonts.googleapis.com/css?family=Josefin+Sans&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/css?family=Aleo&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="styles/index.css" />
     <title>Examination</title>
   </head>
@@ -58,10 +62,72 @@
         </nav>
       </div>
     </header>
-    <section id="whyChooseUs" class="why-choose-us"></section>
-    <section class="how-it-works"></section>
-    <section class="accomodation"></section>
-    <section class="testimonials"></section>
-    <footer></footer>
+
+    <section id="whyChooseUs" class="why-choose-us">
+      <div class="flex">
+        <h1>Why Choose Us</h1>
+        <p>
+          Tion and dislike men who are so beguiled and demoralized by desire by
+          the charms of pleasure of the moment, so blinded by desire, that they
+          cannot foresee <br />
+          <br />
+
+          Dislike men who are so beguiled and demoralized by the charms of
+          pleasure of the moment, so blinded by desire, that.
+        </p>
+        <div>
+          <button>Explore places</button>
+        </div>
+      </div>
+      <div class="images">
+        <img class="image-1" src="images/Image1.why.svg" alt="" />
+        <br />
+        <img class="image-2" src="images/Image2.why.svg" alt="" />
+      </div>
+    </section>
+
+    <section class="how-it-works">
+      <div class="flex">
+        <div>
+          <img class="img-search" /> <i class="fas fa-search"></i>
+          <h5>Search Places</h5>
+        </div>
+
+        <div>
+          <img class="img-check" /> <i class="far fa-check-circle"></i>
+          <h5>Select Places</h5>
+        </div>
+        <div>
+          <img class="img-book" /> <i class="far fa-thumbs-up"></i>
+          <h5>Book & Enjoy</h5>
+        </div>
+      </div>
+    </section>
+
+    <section class="accomodation">
+      <div class="flex">
+        <div class="group-1">
+          <img src="images/accom.group1.svg" alt="" />
+        </div>
+        <div class="group-2">
+          <img src="images/accom.goup2.svg" alt="" />
+        </div>
+      </div>
+    </section>
+
+    <section class="testimonials">
+      <div class="flex">
+        <div class="background-pic">
+          <img src="images/background-testimonial.svg" alt="" />
+        </div>
+      </div>
+    </section>
+    <footer>
+      <div>
+        <h1>Bhrmaon</h5>
+          <h5>Safe Travel Anywhere</h5>
+      </div>
+      
+    </footer>
   </body>
 </html>
