Added socials and hover in footer

--- a/index.html
+++ b/index.html
@@ -122,12 +122,31 @@
         </div>
       </div>
     </section>
+
     <footer>
       <div>
-        <h1>Bhrmaon</h5>
-          <h5>Safe Travel Anywhere</h5>
+        <h1>Bhromaon</h1>
+        <h5>Safe Travel Anywhere</h5>
       </div>
-      
+      <div class="socials">
+        <ul>
+          <a href="#">
+            <li class="socials__link"><i class="fab fa-facebook-f"></i></li
+          ></a>
+          <a href="#"
+            ><li class="socials__link"><i class="fab fa-twitter"></i></li
+          ></a>
+          <a href="#"
+            ><li class="socials__link"><i class="fab fa-linkedin-in"></i></li
+          ></a>
+          <a href="#"
+            ><li class="socials__link"><i class="fab fa-youtube"></i></li
+          ></a>
+          <a href="#"
+            ><li class="socials__link"><i class="fab fa-pinterest"></i></li
+          ></a>
+        </ul>
+      </div>
     </footer>
   </body>
 </html>
