--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles/normalize.css" />
-    <link rel="stylesheet" href="styles/reset.css" />
+
     <script
       src="https://kit.fontawesome.com/6f09f3042b.js"
       crossorigin="anonymous"
@@ -34,8 +34,17 @@
 
         <div class="search">
           <div class="search-bar">
-            <input type="text" placeholder="Search Your Travel Destination" />
-            <button>Search <i class="fas fa-search"></i></button>
+            <form class="search-bar-form">
+              <input
+                type="text"
+                class="search-bar-input"
+                placeholder="Search Your Travel Destination"
+                required
+              />
+              <button type="submit" class="search-bar-submit">
+                Search <i class="fas fa-search"></i>
+              </button>
+            </form>
           </div>
         </div>
 
@@ -52,8 +61,8 @@
           <a href="#">Bhromaon</a>
         </div>
 
-        <nav>
-          <ul>
+        <nav class="menu-nav">
+          <ul class="menu-nav-list">
             <li>Contact Us</li>
             <li>Travel With Us</li>
             <li>What We Do</li>
@@ -105,14 +114,8 @@
     </section>
 
     <section class="accomodation">
-      <div class="flex">
-        <div class="group-1">
-          <img src="images/accom.group1.svg" alt="" />
-        </div>
-        <div class="group-2">
-          <img src="images/accom.goup2.svg" alt="" />
-        </div>
-      </div>
+      <div class="group-1"></div>
+      <div class="group-2"></div>
     </section>
 
     <section class="testimonials">
@@ -126,27 +129,42 @@
     <footer>
       <div>
         <h1>Bhromaon</h1>
-        <h5>Safe Travel Anywhere</h5>
+        <p>Safe Travel Anywhere</p>
       </div>
-      <div class="socials">
-        <ul>
-          <a href="#">
-            <li class="socials__link"><i class="fab fa-facebook-f"></i></li
-          ></a>
-          <a href="#"
-            ><li class="socials__link"><i class="fab fa-twitter"></i></li
-          ></a>
-          <a href="#"
-            ><li class="socials__link"><i class="fab fa-linkedin-in"></i></li
-          ></a>
-          <a href="#"
-            ><li class="socials__link"><i class="fab fa-youtube"></i></li
-          ></a>
-          <a href="#"
-            ><li class="socials__link"><i class="fab fa-pinterest"></i></li
-          ></a>
+
+      <nav class="nav-footer">
+        <ul class="nav-footer-list">
+          <li class="socials">
+            <a href="#">
+              <i class="fab fa-facebook-f"></i>
+            </a>
+          </li>
+
+          <li class="socials">
+            <a href="#">
+              <i class="fab fa-twitter"></i>
+            </a>
+          </li>
+
+          <li class="socials">
+            <a href="#">
+              <i class="fab fa-linkedin-in"></i>
+            </a>
+          </li>
+
+          <li class="socials">
+            <a href="#">
+              <i class="fab fa-youtube"></i>
+            </a>
+          </li>
+
+          <li class="socials">
+            <a href="#">
+              <i class="fab fa-pinterest"></i>
+            </a>
+          </li>
         </ul>
-      </div>
+      </nav>
     </footer>
   </body>
 </html>
